Fixed darkmode styles

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body{
 }
 
 .indivual-letter-container div{
-    background-color: grey;
+    background-color: white;
     border: 1px solid grey;
     height: 60px;
     width: 60px;
@@ -104,6 +104,7 @@ body{
     background-color: rgb(41, 41, 43);
     color: white;
     padding: 3px;
+    transition: ease-in-out 0.3s;
 }
 
 #btn{
@@ -111,6 +112,7 @@ body{
     color: white;
     padding: 3px;
     border-radius: 5px;
+    transition: ease-in-out 0.3s;
 }
 
 .word-info{
